--- a/po/ar.po
+++ b/po/ar.po
@@ -1,4 +1,4 @@
-# French translation for sopcast-player
+# Arabic translation for sopcast-player
 # Copyright (c) 2009 Rosetta Contributors and Canonical Ltd 2009
 # This file is distributed under the same license as the sopcast-player package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2009.
@@ -8,9 +8,9 @@ msgstr ""
 "Project-Id-Version: sopcast-player\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-01-20 20:24+0100\n"
-"PO-Revision-Date: 2009-06-17 12:32+0000\n"
-"Last-Translator: NaSH <Unknown>\n"
-"Language-Team: French <fr@li.org>\n"
+"PO-Revision-Date: 2009-06-09 17:11+0000\n"
+"Last-Translator: أبو همام <xx1429xx@hotmail.com>\n"
+"Language-Team: Arabic <ar@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -19,335 +19,332 @@ msgstr ""
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:88
 msgid "Retrying channel"
-msgstr "Re-connection"
+msgstr "إعادة محاولة الإتصال بالقناة"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:99
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:118
 msgid "Connecting"
-msgstr "En cours de connection"
+msgstr "يحاول الإتصال"
+
+#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:114
+msgid "Buffering"
+msgstr "يتصل"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:124
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:131
 msgid "Buffer"
-msgstr "Mémoire tampon"
+msgstr "متصل"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:213
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:813
 msgid "Channel Guide Last Updated"
-msgstr "Guide de chaines mise a jour"
+msgstr "آخر تحديث لدليل القنوات"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:231
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:240
 msgid "SopCast Player"
-msgstr "Lecteur SopCast"
+msgstr "سوب كاست"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:289
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Channel Guide"
-msgstr "Guide de Chaines"
+msgstr "دليل القنوات"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:419
 msgid "Open Sop Address"
-msgstr "Ouvrir Adresse Sop"
+msgstr "أفتح وصلة sop"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:428
 msgid "Enter Sop Address"
-msgstr "Insérer Adresse Sop"
+msgstr "أدخل عنوان الوصلة"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:475
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:872
 msgid "Name"
-msgstr "Nom"
+msgstr "الاسم"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 msgid "Channel Group"
-msgstr "Groupe de Chaînes"
+msgstr "فريق القنوات"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 msgid "Classification"
-msgstr "Classification"
+msgstr "التصنيف"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 msgid "Stream Format"
-msgstr "Format de Transmission"
+msgstr "حجم التدفق"
+
+#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
+#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
+msgid "QC"
+msgstr "QC"
+
+#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
+#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
+msgid "QS"
+msgstr "QS"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:475
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:872
 msgid "Description"
-msgstr "Description"
+msgstr "وصف"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:475
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:872
 msgid "Channels"
-msgstr "Chaînes"
+msgstr "قنوات"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:579
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:608
 msgid "Press Esc to exit fullscreen"
-msgstr "Appuyez sur Esc (Echap) pour sortir du mode plein écran"
+msgstr "إضغط Esc(مفتاح الهروب) للخروج من وضع ملء الشاشة"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:677
 msgid "Contacting Server"
-msgstr "Communication avec le Serveur"
+msgstr "سيرفر الإتصال"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:685
 msgid "Updating Database"
-msgstr "Mis a jour de la base de données"
+msgstr "تحديث قاعدة البيانات"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:733
 msgid "Channel Guide Update Completed"
-msgstr "Mise à jour de Chaînes"
+msgstr "تحديث دليل القنوات قد أكتمل"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:741
 msgid "Channel Guide Retrieval Failed Due to Network Problems"
-msgstr ""
-"Récupération du Guide de Chaînes échoué a cause de problèmes de réseau"
+msgstr "إسترجاع دليل القنوات قد فشل بسبب مشاكل الشبكة"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:759
 msgid "Downloading Channel Guide"
-msgstr "Téléchargement du Guide de Chaînes"
-
-#: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
-msgid "> Channel Guide"
-msgstr "> Guide de Chaînes"
-
-#: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
-msgid "Bookmark this Channel"
-msgstr "Ajouter chaîne aux favoris"
-
-#: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
-msgid "Volume:"
-msgstr "Volume:"
-
-#: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
-msgid "_Fullscreen"
-msgstr "_Plein-écran"
-
-#: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
-msgid "_Help"
-msgstr "_Aide"
-
-#: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
-msgid "_View"
-msgstr "_Affichage"
-
-#: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
-msgid "_Bookmarks"
-msgstr "_Favoris"
-
-#: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
-msgid "<i>Last Updated: </i>"
-msgstr "<i>Dernière mise à jour: </i>"
-
-#: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
-msgid "Last Updated: "
-msgstr "Dernière mise à jour: "
-
-#: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
-msgid "Never"
-msgstr "Jamais"
-
-#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
-msgid "<b>Channel Guide Auto-Update Frequency</b>"
-msgstr "<b>Fréquence de la mise à jour automatique</b>"
-
-#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
-msgid "<b>Channel Guide Language</b>"
-msgstr "<b>Language pour Guide de Chaînes</b>"
-
-#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
-msgid "<b>Channel Guide Layout:</b>"
-msgstr "<b>Disposition pour Guide de Chaînes</b>"
-
-#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
-msgid "<b>Channel Guide URL</b>"
-msgstr "<b>URL pour Guide de Chaînes</b>"
-
-#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
-msgid "<b>Channel Timeout</b>"
-msgstr "<b>Limite de temps de chargement pour la Chaîne</b>"
-
-#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
-msgid "<b>Media Player</b>"
-msgstr "<b>Lecteur Media</b>"
-
-#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
-msgid "<b>Ports</b>"
-msgstr "<b>Ports</b>"
-
-#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
-msgid "Classic (Separate windows)"
-msgstr "Classic (fenêtres séparées)"
-
-#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
-msgid "Command: "
-msgstr "Commande: "
-
-#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
-msgid "Frequency"
-msgstr "Fréquence"
-
-#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
-msgid "In-bound Port: "
-msgstr "Port Entrant: "
-
-#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
-msgid "Language"
-msgstr "Langue"
-
-#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
-msgid "Out-bound Port: "
-msgstr "Port Sortant: "
-
-#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
-msgid "Player"
-msgstr "Joueur"
-
-#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
-msgid "Static Ports"
-msgstr "Ports Statiques"
-
-#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
-msgid "URL: "
-msgstr "URL: "
-
-#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
-msgid "Unity (Single-window)"
-msgstr "Unité (fenêtre unique):"
-
-#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
-msgid "Use External Player"
-msgstr "Utilisez lecteur externe"
-
-#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
-msgid "Completed"
-msgstr "Terminé"
-
-#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
-msgid "Server Down"
-msgstr "Serveur non disponible"
-
-#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
-msgid "Downloading"
-msgstr "Téléchargement"
-
-#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
-msgid "Static Ports Unavailable"
-msgstr "Ports statiques non disponible"
-
-#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
-#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:754
-msgid "<i>3 Seconds</i>"
-msgstr "<i>3 Secondes</i>"
-
-#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:755
-msgid "<i>30 Seconds</i>"
-msgstr "<i>30 Secondes</i>"
-
-#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:756
-msgid "<i>5 Minutes</i>"
-msgstr "<i>5 Minutes</i>"
-
-#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:757
-#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
-msgid "<i>Never</i>"
-msgstr "<i>Jamais</i>"
-
-msgid "Screenshot"
-msgstr "Capture d'écran"
-
-msgid "Name:"
-msgstr "Nom:"
-
-msgid "Format:"
-msgstr "Format:"
-
-msgid "Bitrate:"
-msgstr "Débit:"
-
-msgid "Channel Group:"
-msgstr "Groupe de Chaîne:"
-
-msgid "Classification:"
-msgstr "Classification:"
-
-msgid "Description:"
-msgstr "Description:"
-
-msgid "Preferences"
-msgstr "Préférences"
-
-msgid "Play"
-msgstr "Jouer"
-
-msgid "Stop"
-msgstr "Arrêt"
-
-msgid "Show Controls"
-msgstr "Voir les Paramètres"
-
-msgid "Chinese"
-msgstr "Chinois"
-
-msgid "English"
-msgstr "Anglais"
-
-msgid "<i>Daily</i>"
-msgstr "<i>Quotidien</i>"
-
-msgid "<i>Program Start</i>"
-msgstr "<i>Demarrer Programme</i>"
-
-msgid "<big><b>Channel Bookmark</b></big>"
-msgstr "<big><b>Favoris de Chaînes</b></big>"
-
-msgid "_Edit"
-msgstr "_Modifier"
-
-msgid "Properties"
-msgstr "Propriétés"
-
-msgid "Bookmark"
-msgstr "Favori"
-
-msgid "Show Toolbar"
-msgstr "Afficher la Barre d'Outils"
-
-#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:114
-msgid "Buffering"
-msgstr "Mise en mémoire tampon"
-
-#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
-#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
-msgid "QC"
-msgstr ""
-
-#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
-#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
-msgid "QS"
-msgstr ""
+msgstr "تحميل دليل القنوات"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_File"
-msgstr ""
+msgstr "_ملف"
+
+#: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
+msgid "> Channel Guide"
+msgstr "> دليل القنوات"
+
+#: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
+msgid "Bookmark this Channel"
+msgstr "إحفظ هذه القناة"
+
+#: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
+msgid "Volume:"
+msgstr "الصوت:"
+
+#: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
+msgid "_Fullscreen"
+msgstr "_ملء الشاشة"
+
+#: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
+msgid "_Help"
+msgstr "_مساعدة"
+
+#: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
+msgid "_View"
+msgstr "_عرض"
+
+#: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
+msgid "_Bookmarks"
+msgstr "_القنوات المحفوظة"
+
+#: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
+msgid "<i>Last Updated: </i>"
+msgstr "<i>آخر تحديث: </i>"
+
+#: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
+msgid "Last Updated: "
+msgstr "آخر تحديث: "
+
+#: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
+msgid "Never"
+msgstr "أبداً"
+
+#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
+msgid "<b>Channel Guide Auto-Update Frequency</b>"
+msgstr "<b>تردد التحديث التلقائي لدليل القنوات</b>"
+
+#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
+msgid "<b>Channel Guide Language</b>"
+msgstr "<b>لغة دليل القنوات</b>"
+
+#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
+msgid "<b>Channel Guide Layout:</b>"
+msgstr "<b>نسق دليل القنوات:</b>"
+
+#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
+msgid "<b>Channel Guide URL</b>"
+msgstr "<b>عنوان دليل القنوات</b>"
+
+#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
+msgid "<b>Channel Timeout</b>"
+msgstr "<b>مهلة القناة</b>"
+
+#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
+msgid "<b>Media Player</b>"
+msgstr "<b>Media Player</b>"
+
+#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
+msgid "<b>Ports</b>"
+msgstr "<b>المنفذ</b>"
+
+#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
+msgid "Classic (Separate windows)"
+msgstr "كلاسيكي (نوافذ مستقلة)"
+
+#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
+msgid "Command: "
+msgstr "الأمر: "
+
+#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
+msgid "Frequency"
+msgstr "التردد"
+
+#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
+msgid "In-bound Port: "
+msgstr "منفذ محدد للدخول: "
+
+#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
+msgid "Language"
+msgstr "اللغة"
+
+#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
+msgid "Out-bound Port: "
+msgstr "منفذ محدد للخروج: "
+
+#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
+msgid "Player"
+msgstr "أساسي"
+
+#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
+msgid "Static Ports"
+msgstr "منفذ ساكن"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Timeout"
-msgstr "Délai d'attente dépassé"
+msgstr "المهلة"
+
+#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
+msgid "URL: "
+msgstr "العنوان: "
+
+#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
+msgid "Unity (Single-window)"
+msgstr "الإنسجام (نافذة واحدة)"
+
+#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
+msgid "Use External Player"
+msgstr "إستخدم Player خارجي"
+
+#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
+msgid "Completed"
+msgstr "كامل"
+
+#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
+msgid "Server Down"
+msgstr "خطأ في السيرفر"
+
+#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
+msgid "Downloading"
+msgstr "تنزيل"
+
+#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
+msgid "Static Ports Unavailable"
+msgstr "المنافذ الساكنة غير متوفرة"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid ""
 "Static ports unavailable, do you wish to continue using dynamic ports?"
-msgstr ""
-"Ports statiques non disponible, souhaitez-vous continuer en utilisent des "
-"ports dynamiques?"
+msgstr "المنافذ الساكنة متوفرة،، هل كنت ترغب في مواصلة إستخدام منافذ حيوية؟"
+
+#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
+#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:754
+msgid "<i>3 Seconds</i>"
+msgstr "<i/>ثلاث ثوان <i>"
+
+#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:755
+msgid "<i>30 Seconds</i>"
+msgstr "<i/> ثلاثون ثانية <i>"
+
+#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:756
+msgid "<i>5 Minutes</i>"
+msgstr "<i/>خمس دقائق<i>"
+
+#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:757
+#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
+msgid "<i>Never</i>"
+msgstr "<i/>أبداً<i>"
+
+msgid "Screenshot"
+msgstr "لقطة للشاشة"
+
+msgid "Name:"
+msgstr "الاسم:"
+
+msgid "Format:"
+msgstr "الشكل:"
+
+msgid "Bitrate:"
+msgstr "معدل البت"
+
+msgid "Channel Group:"
+msgstr "فريق القناة"
+
+msgid "Classification:"
+msgstr "التصنيف:"
+
+msgid "Description:"
+msgstr "الوصف:"
+
+msgid "Preferences"
+msgstr "التفضيلات"
+
+msgid "Play"
+msgstr "تشغيل"
+
+msgid "Stop"
+msgstr "توقف"
 
 msgid "Always On Top"
-msgstr "Toujours au-dessus"
+msgstr "دائما في الأعلى"
+
+msgid "Show Controls"
+msgstr "إظهار عناصر التحكم"
+
+msgid "Chinese"
+msgstr "صيني"
+
+msgid "English"
+msgstr "إنجليزي"
+
+msgid "<i>Daily</i>"
+msgstr "<i/>يوميا<i>"
+
+msgid "<i>Program Start</i>"
+msgstr "<i/>بداية البرنامج<i>"
+
+msgid "<big><b>Channel Bookmark</b></big>"
+msgstr "<big><b>Channel Bookmark</b></big>"
+
+msgid "_Edit"
+msgstr "_تعديل"
+
+msgid "Properties"
+msgstr "العلاقات"
+
+msgid "Bookmark"
+msgstr "العلامات"
+
+msgid "Show Toolbar"
+msgstr "إظهار شريط الأدوات"
