--- a/po/ar.po
+++ b/po/ar.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: sopcast-player\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-01-20 20:24+0100\n"
-"PO-Revision-Date: 2009-06-09 17:11+0000\n"
+"PO-Revision-Date: 2009-09-16 22:07+0000\n"
 "Last-Translator: أبو همام <xx1429xx@hotmail.com>\n"
 "Language-Team: Arabic <ar@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2009-06-22 16:52+0000\n"
+"X-Launchpad-Export-Date: 2009-11-02 01:20+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:88
@@ -24,11 +24,11 @@ msgstr "إعادة محاولة الإتصال بالقناة"
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:99
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:118
 msgid "Connecting"
-msgstr "يحاول الإتصال"
+msgstr "جاري الاتصال..."
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:114
 msgid "Buffering"
-msgstr "يتصل"
+msgstr "التخزين المؤقت"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:124
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:131
@@ -43,7 +43,7 @@ msgstr "آخر تحديث لدليل القنوات"
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:231
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:240
 msgid "SopCast Player"
-msgstr "سوب كاست"
+msgstr "مشغل سوب كاست"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:289
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
@@ -68,7 +68,7 @@ msgstr "الاسم"
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 msgid "Channel Group"
-msgstr "فريق القنوات"
+msgstr "مجموعة القناة"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
@@ -95,12 +95,12 @@ msgstr "QS"
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:872
 msgid "Description"
-msgstr "وصف"
+msgstr "الوصف"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:475
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:872
 msgid "Channels"
-msgstr "قنوات"
+msgstr "القنوات"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:579
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:608
@@ -141,7 +141,7 @@ msgstr "إحفظ هذه القناة"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Volume:"
-msgstr "الصوت:"
+msgstr "حجم الصوت"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_Fullscreen"
@@ -169,7 +169,7 @@ msgstr "آخر تحديث: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Never"
-msgstr "أبداً"
+msgstr "لا مطلقا"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide Auto-Update Frequency</b>"
@@ -205,11 +205,11 @@ msgstr "كلاسيكي (نوافذ مستقلة)"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Command: "
-msgstr "الأمر: "
+msgstr "أمر: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Frequency"
-msgstr "التردد"
+msgstr "تردد"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "In-bound Port: "
@@ -225,7 +225,7 @@ msgstr "منفذ محدد للخروج: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Player"
-msgstr "أساسي"
+msgstr "المشغل"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Static Ports"
@@ -233,7 +233,7 @@ msgstr "منفذ ساكن"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Timeout"
-msgstr "المهلة"
+msgstr "انتهى /انقضى الوقت"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "URL: "
@@ -245,11 +245,11 @@ msgstr "الإنسجام (نافذة واحدة)"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Use External Player"
-msgstr "إستخدم Player خارجي"
+msgstr "إستخدام مشغل خارجي"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Completed"
-msgstr "كامل"
+msgstr "تمّ"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Server Down"
@@ -257,7 +257,7 @@ msgstr "خطأ في السيرفر"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Downloading"
-msgstr "تنزيل"
+msgstr "جاري التنزيل"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Static Ports Unavailable"
@@ -284,19 +284,19 @@ msgstr "<i/>خمس دقائق<i>"
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:757
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<i>Never</i>"
-msgstr "<i/>أبداً<i>"
+msgstr "<i/>لا مطلقااً<i>"
 
 msgid "Screenshot"
-msgstr "لقطة للشاشة"
+msgstr "صوّر الشاشة"
 
 msgid "Name:"
 msgstr "الاسم:"
 
 msgid "Format:"
-msgstr "الشكل:"
+msgstr "الصيغة"
 
 msgid "Bitrate:"
-msgstr "معدل البت"
+msgstr "معدّل البايتات:"
 
 msgid "Channel Group:"
 msgstr "فريق القناة"
@@ -314,7 +314,7 @@ msgid "Play"
 msgstr "تشغيل"
 
 msgid "Stop"
-msgstr "توقف"
+msgstr "إيقاف"
 
 msgid "Always On Top"
 msgstr "دائما في الأعلى"
@@ -335,13 +335,13 @@ msgid "<i>Program Start</i>"
 msgstr "<i/>بداية البرنامج<i>"
 
 msgid "<big><b>Channel Bookmark</b></big>"
-msgstr "<big><b>Channel Bookmark</b></big>"
+msgstr "<big><b>علم القنوات</b></big>"
 
 msgid "_Edit"
 msgstr "_تعديل"
 
 msgid "Properties"
-msgstr "العلاقات"
+msgstr "الخصائص"
 
 msgid "Bookmark"
 msgstr "العلامات"
