--- a/po/bg.po
+++ b/po/bg.po
@@ -1,4 +1,4 @@
-# Brazilian Portuguese translation for sopcast-player
+# Bulgarian translation for sopcast-player
 # Copyright (c) 2009 Rosetta Contributors and Canonical Ltd 2009
 # This file is distributed under the same license as the sopcast-player package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2009.
@@ -8,9 +8,9 @@ msgstr ""
 "Project-Id-Version: sopcast-player\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-01-20 20:24+0100\n"
-"PO-Revision-Date: 2009-09-26 17:13+0000\n"
-"Last-Translator: André Gondim <andregondim@ubuntu.com>\n"
-"Language-Team: Brazilian Portuguese <pt_BR@li.org>\n"
+"PO-Revision-Date: 2009-07-19 16:35+0000\n"
+"Last-Translator: Phoenix.bg <Unknown>\n"
+"Language-Team: Bulgarian <bg@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -19,66 +19,66 @@ msgstr ""
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:88
 msgid "Retrying channel"
-msgstr "Buscando Canais"
+msgstr "Презареждам канала"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:99
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:118
 msgid "Connecting"
-msgstr "Conectando"
+msgstr "Свързване..."
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:114
 msgid "Buffering"
-msgstr "Armazenado"
+msgstr "Буфериране..."
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:124
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:131
 msgid "Buffer"
-msgstr "cache"
+msgstr "Буфер"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:213
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:813
 msgid "Channel Guide Last Updated"
-msgstr "Guia de Canais Atualizados Recentemente"
+msgstr "Списъкът канали е последно ъпдейтван"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:231
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:240
 msgid "SopCast Player"
-msgstr "Player SopCast"
+msgstr "SopCast Плеър"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:289
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Channel Guide"
-msgstr "Guia de Canais"
+msgstr "Списък канали"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:419
 msgid "Open Sop Address"
-msgstr "Abrir Endereço Sop"
+msgstr "Отвори Sop Адрес"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:428
 msgid "Enter Sop Address"
-msgstr "Informe o endereço Sop"
+msgstr "Въведи Sop Адрес"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:475
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:872
 msgid "Name"
-msgstr "Nome"
+msgstr "Име"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 msgid "Channel Group"
-msgstr "Grupo de Canais"
+msgstr "Група канали"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 msgid "Classification"
-msgstr "Classificação"
+msgstr "Класификация"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 msgid "Stream Format"
-msgstr "Formato do fluxo(Stream)"
+msgstr "Потоков Формат"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
@@ -95,258 +95,258 @@ msgstr "QS"
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:872
 msgid "Description"
-msgstr "Descrição"
+msgstr "Описание"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:475
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:872
 msgid "Channels"
-msgstr "Canais"
+msgstr "Канали"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:579
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:608
 msgid "Press Esc to exit fullscreen"
-msgstr "Pressione ESC para sair da tela cheia"
+msgstr "Натисни Esc за изход"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:677
 msgid "Contacting Server"
-msgstr "Conectando ao servidor"
+msgstr "Скачен за Сървъра"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:685
 msgid "Updating Database"
-msgstr "Atualizando banco de dados"
+msgstr "Ъпдейтвам БД"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:733
 msgid "Channel Guide Update Completed"
-msgstr "Atualização da Guia de Canais Completada"
+msgstr "Ъпдейта на Списъка Канали Приключи"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:741
 msgid "Channel Guide Retrieval Failed Due to Network Problems"
-msgstr "Busca de canais falhou devido a problemas na rede"
+msgstr "Заявката към Списъка канали пропадна заради Мрежови Проблеми"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:759
 msgid "Downloading Channel Guide"
-msgstr "Baixando Guia de Canais"
+msgstr "Изтегляне Списъка с канали"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_File"
-msgstr "_Arquivo"
+msgstr "_Файл"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "> Channel Guide"
-msgstr "> Guia de Canais"
+msgstr "> Списък канали"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Bookmark this Channel"
-msgstr "Marcar como Favorito"
+msgstr "Запомни този Канал"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Volume:"
-msgstr "Volume:"
+msgstr "Сила на звука:"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_Fullscreen"
-msgstr "_Tela Cheia"
+msgstr "_Цял екран"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_Help"
-msgstr "_Ajuda"
+msgstr "_Помощ"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_View"
-msgstr "_Ver"
+msgstr "_Изглед"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_Bookmarks"
-msgstr "_Favoritos"
+msgstr "_Отметки"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "<i>Last Updated: </i>"
-msgstr "<i>Última atualização: </i>"
+msgstr "<i>Последно Ъпдейтван: </i>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Last Updated: "
-msgstr "Última atualização: "
+msgstr "Последно Ъпдейтван: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Never"
-msgstr "Nunca"
+msgstr "Никога"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide Auto-Update Frequency</b>"
-msgstr "<b>Frequência de Atualização Automática da Guia de Canais</b>"
+msgstr "<b>Често Авто-Ъпдейт на Списъка канали</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide Language</b>"
-msgstr "<b>Idioma da Guia de Canais</b>"
+msgstr "<b>Език на Списъка канали</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide Layout:</b>"
-msgstr "<b>Layout da Guia de Canais:</b>"
+msgstr "<b>Разположение на Списъка канали:</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide URL</b>"
-msgstr "<b>URL da guia de canais</b>"
+msgstr "<b>URL Адрес на Списъка канали</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Timeout</b>"
-msgstr "<b>Tempo limite do canal</b>"
+msgstr "<b>Таймаут</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Media Player</b>"
-msgstr "<b>Media Player</b>"
+msgstr "<b>Медиа Плеър</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Ports</b>"
-msgstr "<b>Portas</b>"
+msgstr "<b>Портове</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Classic (Separate windows)"
-msgstr "<b>Classico (Janelas Separadas)</b>"
+msgstr "Класически (отделни прозорци)"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Command: "
-msgstr "Comando: "
+msgstr "Команда: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Frequency"
-msgstr "Frequência"
+msgstr "Честота"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "In-bound Port: "
-msgstr "Porta de entrada: "
+msgstr "Входящ Порт: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Language"
-msgstr "Idioma"
+msgstr "Език"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Out-bound Port: "
-msgstr "Porta de Saída: "
+msgstr "Изходящ Порт: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Player"
-msgstr "Player"
+msgstr "Плеър"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Static Ports"
-msgstr "Portas Estáticas"
+msgstr "Статични Портове"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Timeout"
-msgstr "Tempo Esgotado"
+msgstr "Таймаут"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "URL: "
-msgstr "URL: "
+msgstr "URL Адрес: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Unity (Single-window)"
-msgstr "Unida (Única Janela)"
+msgstr "Общо (единичен прозорец)"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Use External Player"
-msgstr "Usar Player externo"
+msgstr "Използвай Външен Плеър"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Completed"
-msgstr "Completado"
+msgstr "Приключи"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Server Down"
-msgstr "Servidor Indisponível"
+msgstr "Сървъра Сдаде Багажа"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Downloading"
-msgstr "Recebendo"
+msgstr "Изтегляне"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Static Ports Unavailable"
-msgstr "Portas Estáticas Indisponíveis"
+msgstr "Статичните Портове са НЕДОСТЪПНИ"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid ""
 "Static ports unavailable, do you wish to continue using dynamic ports?"
 msgstr ""
-"Portas estáticas indisponíveis, você gostaria de continuar usando portas "
-"dinâmicas?"
+"Статичните Портове са НЕДОСТЪПНИ, искаш ли да продължа, използвайки "
+"динамични портове?"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:754
 msgid "<i>3 Seconds</i>"
-msgstr "<i>3 Segundos</i>"
+msgstr "<i>3 Секунди</i>"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:755
 msgid "<i>30 Seconds</i>"
-msgstr "<i>30 Segundos</i>"
+msgstr "<i>30 Секунди</i>"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:756
 msgid "<i>5 Minutes</i>"
-msgstr "<i>5 Minutos</i>"
+msgstr "<i>5 Минути</i>"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:757
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<i>Never</i>"
-msgstr "<i>Nunca</i>"
+msgstr "<i>Никога</i>"
 
 msgid "Screenshot"
-msgstr "Captura de tela"
+msgstr "Снимка на екрана"
 
 msgid "Name:"
-msgstr "Nome:"
+msgstr "Име:"
 
 msgid "Format:"
-msgstr "Formato:"
+msgstr "Формат:"
 
 msgid "Bitrate:"
-msgstr "Taxa de bits:"
+msgstr "Битрейт:"
 
 msgid "Channel Group:"
-msgstr "Grupo de canais:"
+msgstr "Група Канали:"
 
 msgid "Classification:"
-msgstr "Classificação:"
+msgstr "Класификация:"
 
 msgid "Description:"
-msgstr "Descrição:"
+msgstr "Описание:"
 
 msgid "Preferences"
-msgstr "Preferências"
+msgstr "Предпочитания"
 
 msgid "Play"
-msgstr "Reproduzir"
+msgstr "Изпълняване"
 
 msgid "Stop"
-msgstr "Parar"
+msgstr "Спиране"
 
 msgid "Always On Top"
-msgstr "Sempre no Topo"
+msgstr "Винаги най-отгоре"
 
 msgid "Show Controls"
-msgstr "Mostrar Controles"
+msgstr "Показвай Контролите"
 
 msgid "Chinese"
-msgstr "Chinês"
+msgstr "Китайски"
 
 msgid "English"
-msgstr "Inglês"
+msgstr "Английски"
 
 msgid "<i>Daily</i>"
-msgstr "<i>Diariamente</i>"
+msgstr "<i>Дневно</i>"
 
 msgid "<i>Program Start</i>"
-msgstr "<i>Início do programa</i>"
+msgstr "<i>Начало на Програмата</i>"
 
 msgid "<big><b>Channel Bookmark</b></big>"
-msgstr "<big><b>Canais Favoritos</b></big>"
+msgstr "<big><b>Отметка на Канала</b></big>"
 
 msgid "_Edit"
-msgstr "_Editar"
+msgstr "_Редактиране"
 
 msgid "Properties"
-msgstr "Propriedades"
+msgstr "Свойства"
 
 msgid "Bookmark"
-msgstr "Favorito"
+msgstr "Отметка"
 
 msgid "Show Toolbar"
-msgstr "Exibir a barra de ferramentas"
+msgstr "Показване на лентата с инструменти"
