--- a/po/el.po
+++ b/po/el.po
@@ -8,37 +8,62 @@ msgstr ""
 "Project-Id-Version: sopcast-player\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-01-20 20:24+0100\n"
-"PO-Revision-Date: 2009-04-26 18:01+0000\n"
-"Last-Translator: loukoumas <Unknown>\n"
+"PO-Revision-Date: 2009-10-24 13:55+0000\n"
+"Last-Translator: klemes <Unknown>\n"
 "Language-Team: Greek <el@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2009-05-17 19:08+0000\n"
+"X-Launchpad-Export-Date: 2009-11-02 01:20+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:88
 msgid "Retrying channel"
-msgstr "επαναφόρτιση καναλιού"
+msgstr "Επαναφόρτωση καναλιού"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:99
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:118
 msgid "Connecting"
-msgstr "προσπάθεια σύνδεσης"
+msgstr "Γίνεται σύνδεση"
+
+#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:114
+msgid "Buffering"
+msgstr "Φόρτωση"
+
+#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:124
+#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:131
+msgid "Buffer"
+msgstr "Ενδιάμεση μνήμη"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:213
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:813
 msgid "Channel Guide Last Updated"
-msgstr "τελευταία ενημέρωση οδηγού καναλιών"
+msgstr "Τελευταία ενημέρωση οδηγού καναλιών"
+
+#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:231
+#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:240
+msgid "SopCast Player"
+msgstr "Αναπαραγωγέας SopCast"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:289
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Channel Guide"
 msgstr "Οδηγός καναλιών"
 
+#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:419
+msgid "Open Sop Address"
+msgstr "Άνοιγμα τοποθεσίας Sop"
+
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:428
 msgid "Enter Sop Address"
-msgstr "εισάγωγη Sop διεύθυνσης"
+msgstr "Εισαγωγή τοποθεσίας Sop"
+
+#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
+#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:475
+#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
+#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:872
+msgid "Name"
+msgstr "Όνομα"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
@@ -48,12 +73,39 @@ msgstr "Ομάδα καναλιών"
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 msgid "Classification"
-msgstr "υπαγωγή σε ομάδα"
+msgstr "Ταξινόμιση"
+
+#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
+#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
+msgid "Stream Format"
+msgstr "Μορφή ροής"
+
+#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
+#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
+msgid "QC"
+msgstr "QC"
+
+#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
+#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
+msgid "QS"
+msgstr "QS"
+
+#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
+#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:475
+#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
+#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:872
+msgid "Description"
+msgstr "Περιγραφή"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:475
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:872
 msgid "Channels"
 msgstr "Κανάλια"
+
+#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:579
+#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:608
+msgid "Press Esc to exit fullscreen"
+msgstr "Πιέστε Esc για έξοδο από πλήρη οθόνη"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:677
 msgid "Contacting Server"
@@ -61,19 +113,19 @@ msgstr "Επικοινωνία με Εξυπηρετητή"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:685
 msgid "Updating Database"
-msgstr "ενημέρωση βάσης δεδομένων"
+msgstr "Ενημέρωση βάσης δεδομένων"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:733
 msgid "Channel Guide Update Completed"
-msgstr "ολοκλήρωση ενημέρωσης οδηγού καναλιών"
+msgstr "Ολοκλήρωση ενημέρωσης οδηγού καναλιών"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:741
 msgid "Channel Guide Retrieval Failed Due to Network Problems"
-msgstr "επανορθώση οδηγού καναλιών απέτυχε λόγω προβλημάτων δικτύου"
+msgstr "Επανορθώση οδηγού καναλιών απέτυχε λόγω προβλημάτων δικτύου"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:759
 msgid "Downloading Channel Guide"
-msgstr "κατέβασμα οδηγού καναλιών"
+msgstr "Λήψη οδηγού καναλιών"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_File"
@@ -81,7 +133,11 @@ msgstr "Αρχείο"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "> Channel Guide"
-msgstr "> οδηγός καναλιών"
+msgstr "> Οδηγός καναλιών"
+
+#: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
+msgid "Bookmark this Channel"
+msgstr "Προσθήκη καναλιού στους σελιδοδείκτες"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Volume:"
@@ -89,7 +145,7 @@ msgstr "Ένταση ήχου"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_Fullscreen"
-msgstr "Πλήρης οθόνη"
+msgstr "_Πλήρης Οθόνη"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_Help"
@@ -109,242 +165,188 @@ msgstr "<i>τελευταία ενημέρωση: </i>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Last Updated: "
-msgstr "τελευταία ενημέρωση "
+msgstr "Τελευταία ενημέρωση "
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Never"
 msgstr "Ποτέ"
 
-msgid "_Edit"
-msgstr "_Επεξεργασία"
-
-msgid "Properties"
-msgstr "Ρυθμίσεις"
-
-msgid "Bookmark"
-msgstr "Σελιδοδείκτης"
-
-msgid "Show Toolbar"
-msgstr "Εμφάνιση Μπάρας Εργαλείων"
-
-#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:114
-msgid "Buffering"
-msgstr ""
-
-#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:124
-#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:131
-msgid "Buffer"
-msgstr ""
-
-#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:231
-#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:240
-msgid "SopCast Player"
-msgstr ""
-
-#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:419
-msgid "Open Sop Address"
-msgstr ""
-
-#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
-#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:475
-#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
-#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:872
-msgid "Name"
-msgstr ""
-
-#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
-#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
-msgid "Stream Format"
-msgstr ""
-
-#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
-#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
-msgid "QC"
-msgstr ""
-
-#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
-#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
-msgid "QS"
-msgstr ""
-
-#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
-#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:475
-#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
-#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:872
-msgid "Description"
-msgstr ""
-
-#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:579
-#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:608
-msgid "Press Esc to exit fullscreen"
-msgstr ""
-
-#: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
-msgid "Bookmark this Channel"
-msgstr ""
-
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide Auto-Update Frequency</b>"
-msgstr ""
+msgstr "<b>Συχνότητα αυτόματης ενημέρωσης καναλιών</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide Language</b>"
-msgstr ""
+msgstr "<b>Γλώσσα οδηγού καναλιών</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide Layout:</b>"
-msgstr ""
+msgstr "<b>Προβολή οδηγού καναλιών:</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide URL</b>"
-msgstr ""
+msgstr "<b>Διεύθυνση οδηγού καναλιών</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Timeout</b>"
-msgstr ""
+msgstr "Τελος χρόνου σύνδεσης για το Κανάλι"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Media Player</b>"
-msgstr ""
+msgstr "<b>Αναπαραγωγή πολυμέσων</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Ports</b>"
-msgstr ""
+msgstr "<b>Θύρες</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Classic (Separate windows)"
-msgstr ""
+msgstr "Κλασική (Ξεχωριστά παράθυρα)"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Command: "
-msgstr ""
+msgstr "Εντολή: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Frequency"
-msgstr ""
+msgstr "Συχνότητα"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "In-bound Port: "
-msgstr ""
+msgstr "Θύρα εισόδου "
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Language"
-msgstr ""
+msgstr "Γλώσσα"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Out-bound Port: "
-msgstr ""
+msgstr "Θύρα εξόδου "
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Player"
-msgstr ""
+msgstr "Αναπαραγωγέας"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Static Ports"
-msgstr ""
+msgstr "Στατικές Θύρες"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Timeout"
-msgstr ""
+msgstr "Λήξη Χρόνου"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "URL: "
-msgstr ""
+msgstr "διεύθυνση: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Unity (Single-window)"
-msgstr ""
+msgstr "Ένωση (Μονό παράθυρο)"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Use External Player"
-msgstr ""
+msgstr "Χρήση εξωτερικού αναπαραγωγέα"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Completed"
-msgstr ""
+msgstr "Ολοκληρωμένο"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Server Down"
-msgstr ""
+msgstr "Server εκτός λειτουργίας"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Downloading"
-msgstr ""
+msgstr "Γίνεται λήψη"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Static Ports Unavailable"
-msgstr ""
+msgstr "Οι Στατικές Θύρες δεν είναι διαθέσιμες"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid ""
 "Static ports unavailable, do you wish to continue using dynamic ports?"
 msgstr ""
+"Οι Στατικές Θύρες δεν είναι διαθέσιμες,θέλετε να συνεχίσετε να "
+"χρησιμοποιείτε δυναμικές θύρες?"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:754
 msgid "<i>3 Seconds</i>"
-msgstr ""
+msgstr "<i>3 Δευτερόλεπτα</i>"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:755
 msgid "<i>30 Seconds</i>"
-msgstr ""
+msgstr "<i>30 Δευτερόλεπτα</i>"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:756
 msgid "<i>5 Minutes</i>"
-msgstr ""
+msgstr "<i>5 Λεπτά</i>"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:757
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<i>Never</i>"
-msgstr ""
+msgstr "<i>Ποτέ</i>"
 
 msgid "Screenshot"
-msgstr ""
+msgstr "Στιγμιότυπο οθόνης"
 
 msgid "Name:"
-msgstr ""
+msgstr "Όνομα:"
 
 msgid "Format:"
-msgstr ""
+msgstr "Μορφή:"
 
 msgid "Bitrate:"
-msgstr ""
+msgstr "Ρυθμός δεδομένων:"
 
 msgid "Channel Group:"
-msgstr ""
+msgstr "Ομάδα καναλιών:"
 
 msgid "Classification:"
-msgstr ""
+msgstr "Κατηγοριοποίηση:"
 
 msgid "Description:"
-msgstr ""
+msgstr "Περιγραφή:"
 
 msgid "Preferences"
-msgstr ""
+msgstr "Προτιμήσεις"
 
 msgid "Play"
-msgstr ""
+msgstr "Αναπαραγωγή"
 
 msgid "Stop"
-msgstr ""
+msgstr "Διακοπή"
 
 msgid "Always On Top"
-msgstr ""
+msgstr "Πάντα στην κορυφή"
 
 msgid "Show Controls"
-msgstr ""
+msgstr "Εμφάνισε τα χειριστήρια"
 
 msgid "Chinese"
-msgstr ""
+msgstr "Κινέζικα"
 
 msgid "English"
-msgstr ""
+msgstr "Αγγλικά"
 
 msgid "<i>Daily</i>"
-msgstr ""
+msgstr "<i>Ημερήσιος</i>"
 
 msgid "<i>Program Start</i>"
-msgstr ""
+msgstr "<i>Εκκίνηση Προγράμματος</i>"
 
 msgid "<big><b>Channel Bookmark</b></big>"
-msgstr ""
+msgstr "<big><b>Προσθήκη καναλιού στους σελιδοδείκτες</b></big>"
+
+msgid "_Edit"
+msgstr "_Επεξεργασία"
+
+msgid "Properties"
+msgstr "Ιδιότητες"
+
+msgid "Bookmark"
+msgstr "Σελιδοδείκτης"
+
+msgid "Show Toolbar"
+msgstr "Εμφάνιση Γραμμής Εργαλείων"
