--- a/po/es.po
+++ b/po/es.po
@@ -6,13 +6,13 @@ msgstr ""
 "Project-Id-Version: es_ES\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-01-20 20:24+0100\n"
-"PO-Revision-Date: 2009-02-11 12:29+0000\n"
-"Last-Translator: flyguy97 <Unknown>\n"
+"PO-Revision-Date: 2009-10-27 20:11+0000\n"
+"Last-Translator: Antonio De Luna <adelunaddl@yahoo.com.mx>\n"
 "Language-Team: <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2009-05-17 19:08+0000\n"
+"X-Launchpad-Export-Date: 2009-11-02 01:20+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 "X-Poedit-Country: SPAIN\n"
 "X-Poedit-Language: Spanish\n"
@@ -23,7 +23,7 @@ msgstr ""
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:88
 msgid "Retrying channel"
-msgstr "Iniciando canal"
+msgstr "Reintentando canal"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:99
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:118
@@ -32,7 +32,7 @@ msgstr "Conectando"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:114
 msgid "Buffering"
-msgstr "Cargando buffer"
+msgstr "Almacenando en búfer"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:124
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:131
@@ -72,7 +72,7 @@ msgstr "Nombre"
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 msgid "Channel Group"
-msgstr "Grupo"
+msgstr "Grupo de canales"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
@@ -82,17 +82,17 @@ msgstr "Clasificación"
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 msgid "Stream Format"
-msgstr "Formato"
+msgstr "Formato de Flujo"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 msgid "QC"
-msgstr "Qc"
+msgstr "QC"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 msgid "QS"
-msgstr "Qs"
+msgstr "QS"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:475
@@ -161,7 +161,7 @@ msgstr "_Ver"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_Bookmarks"
-msgstr "_Marcadores"
+msgstr "_Favoritos"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "<i>Last Updated: </i>"
@@ -189,7 +189,7 @@ msgstr "<b>Distribución de la lista de canales:</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide URL</b>"
-msgstr "<b>Dirección de la lista de canales</b>"
+msgstr "<b>Dirección URL de la lista de canales</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Timeout</b>"
@@ -270,7 +270,8 @@ msgstr "Puertos fijos no disponibles"
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid ""
 "Static ports unavailable, do you wish to continue using dynamic ports?"
-msgstr "Puertos no disponibles, ¿deseas continuar usando puertos dinámicos?"
+msgstr ""
+"Puertos fijos no disponibles, ¿deseas continuar usando puertos dinámicos?"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:754
@@ -312,7 +313,7 @@ msgid "Description:"
 msgstr "Descripción:"
 
 msgid "Preferences"
-msgstr "Preferences"
+msgstr "Preferencias"
 
 msgid "Play"
 msgstr "Reproducir"
@@ -321,7 +322,7 @@ msgid "Stop"
 msgstr "Parar"
 
 msgid "Always On Top"
-msgstr "Siempre encima"
+msgstr "Siempre en primer plano"
 
 msgid "Show Controls"
 msgstr "Mostrar controles"
@@ -348,7 +349,7 @@ msgid "Properties"
 msgstr "Propiedades"
 
 msgid "Bookmark"
-msgstr "Añadir a favoritos"
+msgstr "Favoritos"
 
 msgid "Show Toolbar"
 msgstr "Mostrar barra de herramientas"
