--- a/po/fr.po
+++ b/po/fr.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: sopcast-player\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-01-20 20:24+0100\n"
-"PO-Revision-Date: 2009-06-17 12:32+0000\n"
-"Last-Translator: NaSH <Unknown>\n"
+"PO-Revision-Date: 2009-09-02 11:12+0000\n"
+"Last-Translator: Nizar Kerkeni <nizarus@nizarus.org>\n"
 "Language-Team: French <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2009-06-22 16:52+0000\n"
+"X-Launchpad-Export-Date: 2009-11-02 01:20+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:88
@@ -25,6 +25,10 @@ msgstr "Re-connection"
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:118
 msgid "Connecting"
 msgstr "En cours de connection"
+
+#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:114
+msgid "Buffering"
+msgstr "Mise en mémoire tampon"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:124
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:131
@@ -77,6 +81,16 @@ msgid "Stream Format"
 msgstr "Format de Transmission"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
+#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
+msgid "QC"
+msgstr "QC"
+
+#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
+#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
+msgid "QS"
+msgstr "QS"
+
+#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:475
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:872
@@ -113,6 +127,10 @@ msgstr ""
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:759
 msgid "Downloading Channel Guide"
 msgstr "Téléchargement du Guide de Chaînes"
+
+#: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
+msgid "_File"
+msgstr "_Fichier"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "> Channel Guide"
@@ -215,6 +233,10 @@ msgid "Static Ports"
 msgstr "Ports Statiques"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
+msgid "Timeout"
+msgstr "Délai d'attente dépassé"
+
+#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "URL: "
 msgstr "URL: "
 
@@ -241,6 +263,13 @@ msgstr "Téléchargement"
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Static Ports Unavailable"
 msgstr "Ports statiques non disponible"
+
+#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
+msgid ""
+"Static ports unavailable, do you wish to continue using dynamic ports?"
+msgstr ""
+"Ports statiques non disponible, souhaitez-vous continuer en utilisent des "
+"ports dynamiques?"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:754
@@ -290,6 +319,9 @@ msgstr "Jouer"
 msgid "Stop"
 msgstr "Arrêt"
 
+msgid "Always On Top"
+msgstr "Toujours au-dessus"
+
 msgid "Show Controls"
 msgstr "Voir les Paramètres"
 
@@ -319,35 +351,3 @@ msgstr "Favori"
 
 msgid "Show Toolbar"
 msgstr "Afficher la Barre d'Outils"
-
-#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:114
-msgid "Buffering"
-msgstr "Mise en mémoire tampon"
-
-#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
-#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
-msgid "QC"
-msgstr ""
-
-#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
-#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
-msgid "QS"
-msgstr ""
-
-#: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
-msgid "_File"
-msgstr ""
-
-#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
-msgid "Timeout"
-msgstr "Délai d'attente dépassé"
-
-#: /home/jason/Desktop/SopCast-Player/ui/Options.glade
-msgid ""
-"Static ports unavailable, do you wish to continue using dynamic ports?"
-msgstr ""
-"Ports statiques non disponible, souhaitez-vous continuer en utilisent des "
-"ports dynamiques?"
-
-msgid "Always On Top"
-msgstr "Toujours au-dessus"
