--- a/po/he.po
+++ b/po/he.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: sopcast-player\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-01-20 20:24+0100\n"
-"PO-Revision-Date: 2009-04-07 10:23+0000\n"
-"Last-Translator: Michael Gilad <Unknown>\n"
+"PO-Revision-Date: 2009-10-04 06:36+0000\n"
+"Last-Translator: Yaron <sh.yaron@gmail.com>\n"
 "Language-Team: Hebrew <he@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2009-05-17 19:08+0000\n"
+"X-Launchpad-Export-Date: 2009-11-02 01:20+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:88
@@ -79,6 +79,16 @@ msgstr "סיווג"
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 msgid "Stream Format"
 msgstr "פורמט זרימה"
+
+#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
+#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
+msgid "QC"
+msgstr ""
+
+#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
+#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
+msgid "QS"
+msgstr ""
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:475
@@ -150,6 +160,10 @@ msgid "_Bookmarks"
 msgstr "_סימניות"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
+msgid "<i>Last Updated: </i>"
+msgstr "<i>עדכון אחרון: </i>"
+
+#: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Last Updated: "
 msgstr "עודכן לאחרונה: "
 
@@ -157,194 +171,180 @@ msgstr "עודכן לאחרונה: "
 msgid "Never"
 msgstr "לעולם לא"
 
-#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
-#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
-msgid "QC"
-msgstr ""
-
-#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
-#: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
-msgid "QS"
-msgstr ""
-
-#: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
-msgid "<i>Last Updated: </i>"
-msgstr ""
-
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide Auto-Update Frequency</b>"
-msgstr ""
+msgstr "<b>תדירות העדכון האוטומטי של מדריך הערוצים</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide Language</b>"
-msgstr ""
+msgstr "<b>שפת מדריך הערוצים</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide Layout:</b>"
-msgstr ""
+msgstr "<b>פריסת מדריך הערוצים:</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide URL</b>"
-msgstr ""
+msgstr "<b>כתובת מדריך הערוצים</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Timeout</b>"
-msgstr ""
+msgstr "<b>זמן תפוגת הערוץ</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Media Player</b>"
-msgstr ""
+msgstr "<b>נגן מדיה</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Ports</b>"
-msgstr ""
+msgstr "<b>פתחות</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Classic (Separate windows)"
-msgstr ""
+msgstr "קלאסי (חלונות נפרדים)"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Command: "
-msgstr ""
+msgstr "פקודה: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Frequency"
-msgstr ""
+msgstr "תדירות"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "In-bound Port: "
-msgstr ""
+msgstr "פתחת כניסה: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Language"
-msgstr ""
+msgstr "שפה"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Out-bound Port: "
-msgstr ""
+msgstr "פתחת יציאה: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Player"
-msgstr ""
+msgstr "נגן"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Static Ports"
-msgstr ""
+msgstr "פתחות סטטיות"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Timeout"
-msgstr ""
+msgstr "תום הזמן"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "URL: "
-msgstr ""
+msgstr "כתובת: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Unity (Single-window)"
-msgstr ""
+msgstr "אחידות (חלון יחיד)"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Use External Player"
-msgstr ""
+msgstr "שימוש בנגן חיצוני"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Completed"
-msgstr ""
+msgstr "הושלם"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Server Down"
-msgstr ""
+msgstr "השרת נפל"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Downloading"
-msgstr ""
+msgstr "בתהליכי הורדה"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Static Ports Unavailable"
-msgstr ""
+msgstr "אין פתחות סטטיות זמינות"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid ""
 "Static ports unavailable, do you wish to continue using dynamic ports?"
-msgstr ""
+msgstr "פתחות סטטיות אינן זמינות, האם ברצונך להמשיך ולחפש פתחות דינאמיות?"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:754
 msgid "<i>3 Seconds</i>"
-msgstr ""
+msgstr "<i>3 שניות</i>"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:755
 msgid "<i>30 Seconds</i>"
-msgstr ""
+msgstr "<i>30 שניות</i>"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:756
 msgid "<i>5 Minutes</i>"
-msgstr ""
+msgstr "<i>5 דקות</i>"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:757
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<i>Never</i>"
-msgstr ""
+msgstr "<i>לעולם לא</i>"
 
 msgid "Screenshot"
-msgstr ""
+msgstr "צילום מסך"
 
 msgid "Name:"
-msgstr ""
+msgstr "שם:"
 
 msgid "Format:"
-msgstr ""
+msgstr "‏סוג:"
 
 msgid "Bitrate:"
-msgstr ""
+msgstr "קצב סיביות:"
 
 msgid "Channel Group:"
-msgstr ""
+msgstr "קבוצת הערוץ:"
 
 msgid "Classification:"
-msgstr ""
+msgstr "סיווג:"
 
 msgid "Description:"
-msgstr ""
+msgstr "תאור:"
 
 msgid "Preferences"
-msgstr ""
+msgstr "העדפות"
 
 msgid "Play"
-msgstr ""
+msgstr "נגינה"
 
 msgid "Stop"
-msgstr ""
+msgstr "עצירה"
 
 msgid "Always On Top"
-msgstr ""
+msgstr "תמיד עליון"
 
 msgid "Show Controls"
-msgstr ""
+msgstr "הצגת פקדים"
 
 msgid "Chinese"
-msgstr ""
+msgstr "סינית"
 
 msgid "English"
-msgstr ""
+msgstr "אנגלית"
 
 msgid "<i>Daily</i>"
-msgstr ""
+msgstr "<i>יומי</i>"
 
 msgid "<i>Program Start</i>"
-msgstr ""
+msgstr "<i>התחלת התוכנית</i>"
 
 msgid "<big><b>Channel Bookmark</b></big>"
-msgstr ""
+msgstr "<big><b>סימון הערוץ</b></big>"
 
 msgid "_Edit"
-msgstr ""
+msgstr "ע_ריכה"
 
 msgid "Properties"
-msgstr ""
+msgstr "מאפיינים"
 
 msgid "Bookmark"
-msgstr ""
+msgstr "סימניה"
 
 msgid "Show Toolbar"
-msgstr ""
+msgstr "הצגת סרגל הכלים"
