--- a/po/hu.po
+++ b/po/hu.po
@@ -1,4 +1,4 @@
-# Brazilian Portuguese translation for sopcast-player
+# Hungarian translation for sopcast-player
 # Copyright (c) 2009 Rosetta Contributors and Canonical Ltd 2009
 # This file is distributed under the same license as the sopcast-player package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2009.
@@ -8,9 +8,9 @@ msgstr ""
 "Project-Id-Version: sopcast-player\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-01-20 20:24+0100\n"
-"PO-Revision-Date: 2009-09-26 17:13+0000\n"
-"Last-Translator: André Gondim <andregondim@ubuntu.com>\n"
-"Language-Team: Brazilian Portuguese <pt_BR@li.org>\n"
+"PO-Revision-Date: 2009-05-19 13:15+0000\n"
+"Last-Translator: István Papp <Unknown>\n"
+"Language-Team: Hungarian <hu@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -19,66 +19,66 @@ msgstr ""
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:88
 msgid "Retrying channel"
-msgstr "Buscando Canais"
+msgstr "Csatorna újrapróbálása"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:99
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:118
 msgid "Connecting"
-msgstr "Conectando"
+msgstr "Kapcsolódás"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:114
 msgid "Buffering"
-msgstr "Armazenado"
+msgstr "Pufferelés"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:124
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:131
 msgid "Buffer"
-msgstr "cache"
+msgstr "Puffer"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:213
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:813
 msgid "Channel Guide Last Updated"
-msgstr "Guia de Canais Atualizados Recentemente"
+msgstr "A csatornalista utolsó frissítése"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:231
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:240
 msgid "SopCast Player"
-msgstr "Player SopCast"
+msgstr "SopCast Lejászó"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:289
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Channel Guide"
-msgstr "Guia de Canais"
+msgstr "Csatornalista"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:419
 msgid "Open Sop Address"
-msgstr "Abrir Endereço Sop"
+msgstr "Sop cím megnyítás"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:428
 msgid "Enter Sop Address"
-msgstr "Informe o endereço Sop"
+msgstr "Sop cím beírás"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:475
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:872
 msgid "Name"
-msgstr "Nome"
+msgstr "Név"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 msgid "Channel Group"
-msgstr "Grupo de Canais"
+msgstr "Csatorna csoport"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 msgid "Classification"
-msgstr "Classificação"
+msgstr "Minősítés"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 msgid "Stream Format"
-msgstr "Formato do fluxo(Stream)"
+msgstr "Folyam formátum"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
@@ -95,145 +95,145 @@ msgstr "QS"
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:872
 msgid "Description"
-msgstr "Descrição"
+msgstr "Leírás"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:475
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:872
 msgid "Channels"
-msgstr "Canais"
+msgstr "Csatornák"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:579
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:608
 msgid "Press Esc to exit fullscreen"
-msgstr "Pressione ESC para sair da tela cheia"
+msgstr "Nyomja meg az Esc-et a teljes képernyős módból való kilépéshez"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:677
 msgid "Contacting Server"
-msgstr "Conectando ao servidor"
+msgstr "Kapcsolódás a szerverhez"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:685
 msgid "Updating Database"
-msgstr "Atualizando banco de dados"
+msgstr "Adatbázis frissítése"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:733
 msgid "Channel Guide Update Completed"
-msgstr "Atualização da Guia de Canais Completada"
+msgstr "A csatornalista frissítése befejeződött"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:741
 msgid "Channel Guide Retrieval Failed Due to Network Problems"
-msgstr "Busca de canais falhou devido a problemas na rede"
+msgstr "A csatornalista újratöltése hálózati probléma miatt nem sikerült"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:759
 msgid "Downloading Channel Guide"
-msgstr "Baixando Guia de Canais"
+msgstr "Csatornalista letöltése"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_File"
-msgstr "_Arquivo"
+msgstr "_Fájl"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "> Channel Guide"
-msgstr "> Guia de Canais"
+msgstr "Csatornalista"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Bookmark this Channel"
-msgstr "Marcar como Favorito"
+msgstr "Csatorna hozzáadása a könyvjelzőhöz"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Volume:"
-msgstr "Volume:"
+msgstr "Hangerő:"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_Fullscreen"
-msgstr "_Tela Cheia"
+msgstr "_Teljes képernyős üzemmód"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_Help"
-msgstr "_Ajuda"
+msgstr "_Sugó"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_View"
-msgstr "_Ver"
+msgstr "_Nézet"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_Bookmarks"
-msgstr "_Favoritos"
+msgstr "_Könyvjelzők"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "<i>Last Updated: </i>"
-msgstr "<i>Última atualização: </i>"
+msgstr "<i>Utolsó frissítés: </i>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Last Updated: "
-msgstr "Última atualização: "
+msgstr "Utolsó frissítés: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Never"
-msgstr "Nunca"
+msgstr "Soha"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide Auto-Update Frequency</b>"
-msgstr "<b>Frequência de Atualização Automática da Guia de Canais</b>"
+msgstr "<b>A csatornalista automatikus frissítésének gyakorisága</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide Language</b>"
-msgstr "<b>Idioma da Guia de Canais</b>"
+msgstr "<b>A csatornalista nyelve</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide Layout:</b>"
-msgstr "<b>Layout da Guia de Canais:</b>"
+msgstr "<b>A csatornalista elrendezése:</>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide URL</b>"
-msgstr "<b>URL da guia de canais</b>"
+msgstr "<b>A csatornalista URL címe</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Timeout</b>"
-msgstr "<b>Tempo limite do canal</b>"
+msgstr "<b>A csatorna időtúllépése</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Media Player</b>"
-msgstr "<b>Media Player</b>"
+msgstr "<b>Médialejátszó</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Ports</b>"
-msgstr "<b>Portas</b>"
+msgstr "<b>Portok</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Classic (Separate windows)"
-msgstr "<b>Classico (Janelas Separadas)</b>"
+msgstr "Klasszikus (külön ablakban)"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Command: "
-msgstr "Comando: "
+msgstr "Parancs: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Frequency"
-msgstr "Frequência"
+msgstr "Gyakoriság"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "In-bound Port: "
-msgstr "Porta de entrada: "
+msgstr "Bejövő port: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Language"
-msgstr "Idioma"
+msgstr "Nyelv"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Out-bound Port: "
-msgstr "Porta de Saída: "
+msgstr "Kimenő port: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Player"
-msgstr "Player"
+msgstr "Lejászó"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Static Ports"
-msgstr "Portas Estáticas"
+msgstr "Statikus port"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Timeout"
-msgstr "Tempo Esgotado"
+msgstr "Időtúllépés"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "URL: "
@@ -241,112 +241,112 @@ msgstr "URL: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Unity (Single-window)"
-msgstr "Unida (Única Janela)"
+msgstr "Egyesített (egyablakos)"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Use External Player"
-msgstr "Usar Player externo"
+msgstr "Külső lejátszó használata"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Completed"
-msgstr "Completado"
+msgstr "Befejeződött"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Server Down"
-msgstr "Servidor Indisponível"
+msgstr "Lekapcsolódás a szerverről"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Downloading"
-msgstr "Recebendo"
+msgstr "Letöltése"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Static Ports Unavailable"
-msgstr "Portas Estáticas Indisponíveis"
+msgstr "A statikus portok nem érhetőek el"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid ""
 "Static ports unavailable, do you wish to continue using dynamic ports?"
 msgstr ""
-"Portas estáticas indisponíveis, você gostaria de continuar usando portas "
-"dinâmicas?"
+"A statikus portok nem érhetőek el, folytatni akarja dinamiks portok "
+"használatával?"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:754
 msgid "<i>3 Seconds</i>"
-msgstr "<i>3 Segundos</i>"
+msgstr "<i>3 másodperc</i>"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:755
 msgid "<i>30 Seconds</i>"
-msgstr "<i>30 Segundos</i>"
+msgstr "<i>30 másodperc</i>"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:756
 msgid "<i>5 Minutes</i>"
-msgstr "<i>5 Minutos</i>"
+msgstr "<i>5 perc</i>"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:757
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<i>Never</i>"
-msgstr "<i>Nunca</i>"
+msgstr "<i>Soha</i>"
 
 msgid "Screenshot"
-msgstr "Captura de tela"
+msgstr "Képernyőkép"
 
 msgid "Name:"
-msgstr "Nome:"
+msgstr "Név:"
 
 msgid "Format:"
-msgstr "Formato:"
+msgstr "Formátum:"
 
 msgid "Bitrate:"
-msgstr "Taxa de bits:"
+msgstr "Bitsebesség:"
 
 msgid "Channel Group:"
-msgstr "Grupo de canais:"
+msgstr "Csatorna csoport:"
 
 msgid "Classification:"
-msgstr "Classificação:"
+msgstr "Minősítés:"
 
 msgid "Description:"
-msgstr "Descrição:"
+msgstr "Leírás:"
 
 msgid "Preferences"
-msgstr "Preferências"
+msgstr "Beállítások"
 
 msgid "Play"
-msgstr "Reproduzir"
+msgstr "Lejátszás"
 
 msgid "Stop"
-msgstr "Parar"
+msgstr "Megállítás"
 
 msgid "Always On Top"
-msgstr "Sempre no Topo"
+msgstr "Mindig felül"
 
 msgid "Show Controls"
-msgstr "Mostrar Controles"
+msgstr "Vezérlők mutatása"
 
 msgid "Chinese"
-msgstr "Chinês"
+msgstr "Kínai"
 
 msgid "English"
-msgstr "Inglês"
+msgstr "Angol"
 
 msgid "<i>Daily</i>"
-msgstr "<i>Diariamente</i>"
+msgstr "<i>Napi</i>"
 
 msgid "<i>Program Start</i>"
-msgstr "<i>Início do programa</i>"
+msgstr "<i>Program indítás</i>"
 
 msgid "<big><b>Channel Bookmark</b></big>"
-msgstr "<big><b>Canais Favoritos</b></big>"
+msgstr "<big><b>Csatorna könyvjelző</b><big>"
 
 msgid "_Edit"
-msgstr "_Editar"
+msgstr "Sz_erkesztés"
 
 msgid "Properties"
-msgstr "Propriedades"
+msgstr "Tulajdonságok"
 
 msgid "Bookmark"
-msgstr "Favorito"
+msgstr "Könyvjelző"
 
 msgid "Show Toolbar"
-msgstr "Exibir a barra de ferramentas"
+msgstr "Eszköztár mutatása"
