--- a/po/ro.po
+++ b/po/ro.po
@@ -1,4 +1,4 @@
-# Brazilian Portuguese translation for sopcast-player
+# Romanian translation for sopcast-player
 # Copyright (c) 2009 Rosetta Contributors and Canonical Ltd 2009
 # This file is distributed under the same license as the sopcast-player package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2009.
@@ -8,9 +8,9 @@ msgstr ""
 "Project-Id-Version: sopcast-player\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-01-20 20:24+0100\n"
-"PO-Revision-Date: 2009-09-26 17:13+0000\n"
-"Last-Translator: André Gondim <andregondim@ubuntu.com>\n"
-"Language-Team: Brazilian Portuguese <pt_BR@li.org>\n"
+"PO-Revision-Date: 2009-09-24 15:47+0000\n"
+"Last-Translator: Dan Telecan <telecan_dan@yahoo.com>\n"
+"Language-Team: Romanian <ro@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -19,66 +19,66 @@ msgstr ""
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:88
 msgid "Retrying channel"
-msgstr "Buscando Canais"
+msgstr "Reîncercare canal"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:99
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:118
 msgid "Connecting"
-msgstr "Conectando"
+msgstr "Conectare"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:114
 msgid "Buffering"
-msgstr "Armazenado"
+msgstr "Se creeză memoria tampon"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:124
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:131
 msgid "Buffer"
-msgstr "cache"
+msgstr "Buffer"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:213
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:813
 msgid "Channel Guide Last Updated"
-msgstr "Guia de Canais Atualizados Recentemente"
+msgstr "Ultimul ghid de canale actualizat"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:231
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:240
 msgid "SopCast Player"
-msgstr "Player SopCast"
+msgstr "SopCast Player"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:289
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Channel Guide"
-msgstr "Guia de Canais"
+msgstr "Ghid de canale"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:419
 msgid "Open Sop Address"
-msgstr "Abrir Endereço Sop"
+msgstr "Deschide adresă sop"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:428
 msgid "Enter Sop Address"
-msgstr "Informe o endereço Sop"
+msgstr "Introduceți adresa sop"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:475
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:872
 msgid "Name"
-msgstr "Nome"
+msgstr "Nume"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 msgid "Channel Group"
-msgstr "Grupo de Canais"
+msgstr "Grup de canale"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 msgid "Classification"
-msgstr "Classificação"
+msgstr "Clasificare"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 msgid "Stream Format"
-msgstr "Formato do fluxo(Stream)"
+msgstr "Stream Format"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
@@ -95,133 +95,134 @@ msgstr "QS"
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:872
 msgid "Description"
-msgstr "Descrição"
+msgstr "Descriere"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:475
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:872
 msgid "Channels"
-msgstr "Canais"
+msgstr "Canale"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:579
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:608
 msgid "Press Esc to exit fullscreen"
-msgstr "Pressione ESC para sair da tela cheia"
+msgstr "Pentru a ieși din modul pe tot ecranul apăsați Esc"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:677
 msgid "Contacting Server"
-msgstr "Conectando ao servidor"
+msgstr "Conectare la server"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:685
 msgid "Updating Database"
-msgstr "Atualizando banco de dados"
+msgstr "Actualizare bază de date"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:733
 msgid "Channel Guide Update Completed"
-msgstr "Atualização da Guia de Canais Completada"
+msgstr "Actualizare completă a ghidului de canale"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:741
 msgid "Channel Guide Retrieval Failed Due to Network Problems"
-msgstr "Busca de canais falhou devido a problemas na rede"
+msgstr ""
+"Preluarea ghidului de canale a eșuat din cauza unor probleme de rețea"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:759
 msgid "Downloading Channel Guide"
-msgstr "Baixando Guia de Canais"
+msgstr "Descărcare ghid de canale"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_File"
-msgstr "_Arquivo"
+msgstr "_Fișier"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "> Channel Guide"
-msgstr "> Guia de Canais"
+msgstr "> Ghid de canale"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Bookmark this Channel"
-msgstr "Marcar como Favorito"
+msgstr "Marchează ca favorit"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Volume:"
-msgstr "Volume:"
+msgstr "Volum:"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_Fullscreen"
-msgstr "_Tela Cheia"
+msgstr "P_e tot ecranul"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_Help"
-msgstr "_Ajuda"
+msgstr "_Ajutor"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_View"
-msgstr "_Ver"
+msgstr "_Vizualizare"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_Bookmarks"
-msgstr "_Favoritos"
+msgstr "_Favorite"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "<i>Last Updated: </i>"
-msgstr "<i>Última atualização: </i>"
+msgstr "<i>Ultimul actualizat: </i>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Last Updated: "
-msgstr "Última atualização: "
+msgstr "Ultimul actualizat "
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Never"
-msgstr "Nunca"
+msgstr "Niciodată"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide Auto-Update Frequency</b>"
-msgstr "<b>Frequência de Atualização Automática da Guia de Canais</b>"
+msgstr "<b>Frecvența actualizărilor automate a ghidului de canale</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide Language</b>"
-msgstr "<b>Idioma da Guia de Canais</b>"
+msgstr "<b>Limba ghidului de canale</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide Layout:</b>"
-msgstr "<b>Layout da Guia de Canais:</b>"
+msgstr "<b>Aspectul ghidului de canale:</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide URL</b>"
-msgstr "<b>URL da guia de canais</b>"
+msgstr "<b>Adresa ghidului de canale</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Timeout</b>"
-msgstr "<b>Tempo limite do canal</b>"
+msgstr "<b>Pauză canal</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Media Player</b>"
-msgstr "<b>Media Player</b>"
+msgstr "<b>Player media</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Ports</b>"
-msgstr "<b>Portas</b>"
+msgstr "<b>Porturi</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Classic (Separate windows)"
-msgstr "<b>Classico (Janelas Separadas)</b>"
+msgstr "Clasic (ferestre separate)"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Command: "
-msgstr "Comando: "
+msgstr "Comandă: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Frequency"
-msgstr "Frequência"
+msgstr "Frecvență"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "In-bound Port: "
-msgstr "Porta de entrada: "
+msgstr "Porturi de intrare: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Language"
-msgstr "Idioma"
+msgstr "Limbă"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Out-bound Port: "
-msgstr "Porta de Saída: "
+msgstr "Porturi de ieșire: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Player"
@@ -229,11 +230,11 @@ msgstr "Player"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Static Ports"
-msgstr "Portas Estáticas"
+msgstr "Porturi statice"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Timeout"
-msgstr "Tempo Esgotado"
+msgstr "Timeout"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "URL: "
@@ -241,112 +242,112 @@ msgstr "URL: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Unity (Single-window)"
-msgstr "Unida (Única Janela)"
+msgstr "Unitate (o singură fereastră)"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Use External Player"
-msgstr "Usar Player externo"
+msgstr "Folosește player extern"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Completed"
-msgstr "Completado"
+msgstr "Complet"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Server Down"
-msgstr "Servidor Indisponível"
+msgstr "Server picat"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Downloading"
-msgstr "Recebendo"
+msgstr "Descărcare"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Static Ports Unavailable"
-msgstr "Portas Estáticas Indisponíveis"
+msgstr "Porturi statice indisponibile"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid ""
 "Static ports unavailable, do you wish to continue using dynamic ports?"
 msgstr ""
-"Portas estáticas indisponíveis, você gostaria de continuar usando portas "
-"dinâmicas?"
+"Porturile statice sunt indisponibile, doriți să continuați să folosiți "
+"porturi dinamice?"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:754
 msgid "<i>3 Seconds</i>"
-msgstr "<i>3 Segundos</i>"
+msgstr "<i>3 secunde</i>"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:755
 msgid "<i>30 Seconds</i>"
-msgstr "<i>30 Segundos</i>"
+msgstr "<i>30 de secunde</i>"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:756
 msgid "<i>5 Minutes</i>"
-msgstr "<i>5 Minutos</i>"
+msgstr "<i>5 minute</i>"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:757
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<i>Never</i>"
-msgstr "<i>Nunca</i>"
+msgstr "<i>Niciodată</i>"
 
 msgid "Screenshot"
-msgstr "Captura de tela"
+msgstr "Captură de ecran"
 
 msgid "Name:"
-msgstr "Nome:"
+msgstr "Nume:"
 
 msgid "Format:"
-msgstr "Formato:"
+msgstr "Format:"
 
 msgid "Bitrate:"
-msgstr "Taxa de bits:"
+msgstr "Rată de biți:"
 
 msgid "Channel Group:"
-msgstr "Grupo de canais:"
+msgstr "Grup canale:"
 
 msgid "Classification:"
-msgstr "Classificação:"
+msgstr "Clasificare:"
 
 msgid "Description:"
-msgstr "Descrição:"
+msgstr "Descriere:"
 
 msgid "Preferences"
-msgstr "Preferências"
+msgstr "Preferințe"
 
 msgid "Play"
-msgstr "Reproduzir"
+msgstr "Redare"
 
 msgid "Stop"
-msgstr "Parar"
+msgstr "Oprire"
 
 msgid "Always On Top"
-msgstr "Sempre no Topo"
+msgstr "Întotdeauna deasupra"
 
 msgid "Show Controls"
-msgstr "Mostrar Controles"
+msgstr "Arată controale"
 
 msgid "Chinese"
-msgstr "Chinês"
+msgstr "Chineză"
 
 msgid "English"
-msgstr "Inglês"
+msgstr "Engleză"
 
 msgid "<i>Daily</i>"
-msgstr "<i>Diariamente</i>"
+msgstr "<i>Zilnic</i>"
 
 msgid "<i>Program Start</i>"
-msgstr "<i>Início do programa</i>"
+msgstr "<i>Pornire program</i>"
 
 msgid "<big><b>Channel Bookmark</b></big>"
-msgstr "<big><b>Canais Favoritos</b></big>"
+msgstr "<big><b>Canale favorite</b></big>"
 
 msgid "_Edit"
-msgstr "_Editar"
+msgstr "_Editare"
 
 msgid "Properties"
-msgstr "Propriedades"
+msgstr "Proprietăți"
 
 msgid "Bookmark"
-msgstr "Favorito"
+msgstr "Favorit"
 
 msgid "Show Toolbar"
-msgstr "Exibir a barra de ferramentas"
+msgstr "Afișează bara de unelte"
