--- a/po/sq.po
+++ b/po/sq.po
@@ -1,4 +1,4 @@
-# Brazilian Portuguese translation for sopcast-player
+# Albanian translation for sopcast-player
 # Copyright (c) 2009 Rosetta Contributors and Canonical Ltd 2009
 # This file is distributed under the same license as the sopcast-player package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2009.
@@ -8,9 +8,9 @@ msgstr ""
 "Project-Id-Version: sopcast-player\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-01-20 20:24+0100\n"
-"PO-Revision-Date: 2009-09-26 17:13+0000\n"
-"Last-Translator: André Gondim <andregondim@ubuntu.com>\n"
-"Language-Team: Brazilian Portuguese <pt_BR@li.org>\n"
+"PO-Revision-Date: 2009-07-20 05:40+0000\n"
+"Last-Translator: Vilson Gjeci <vilsongjeci@gmail.com>\n"
+"Language-Team: Albanian <sq@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -19,66 +19,66 @@ msgstr ""
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:88
 msgid "Retrying channel"
-msgstr "Buscando Canais"
+msgstr "Duke riprovuar kanalin"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:99
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:118
 msgid "Connecting"
-msgstr "Conectando"
+msgstr "Duke u lidhur"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:114
 msgid "Buffering"
-msgstr "Armazenado"
+msgstr "Duke mbushur buffer"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:124
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:131
 msgid "Buffer"
-msgstr "cache"
+msgstr "Buffer"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:213
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:813
 msgid "Channel Guide Last Updated"
-msgstr "Guia de Canais Atualizados Recentemente"
+msgstr "Guida e Kanaleve e Përditësuar së Fundmi"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:231
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:240
 msgid "SopCast Player"
-msgstr "Player SopCast"
+msgstr "Luajtësi SopCast"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:289
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Channel Guide"
-msgstr "Guia de Canais"
+msgstr "Udhëzuesi i Kanaleve"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:419
 msgid "Open Sop Address"
-msgstr "Abrir Endereço Sop"
+msgstr "Hap një Adresë Sop"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:428
 msgid "Enter Sop Address"
-msgstr "Informe o endereço Sop"
+msgstr "Vendos një Adresë Sop"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:475
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:872
 msgid "Name"
-msgstr "Nome"
+msgstr "Emri"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 msgid "Channel Group"
-msgstr "Grupo de Canais"
+msgstr "Grup Kanalesh"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 msgid "Classification"
-msgstr "Classificação"
+msgstr "Klasifikimi"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 msgid "Stream Format"
-msgstr "Formato do fluxo(Stream)"
+msgstr "Formati i Stream"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:470
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
@@ -95,145 +95,146 @@ msgstr "QS"
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:865
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:872
 msgid "Description"
-msgstr "Descrição"
+msgstr "Përshkrimi"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:475
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:872
 msgid "Channels"
-msgstr "Canais"
+msgstr "Kanalet"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:579
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:608
 msgid "Press Esc to exit fullscreen"
-msgstr "Pressione ESC para sair da tela cheia"
+msgstr "Shtyp Esc për të dalë nga ekrani i Plotë"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:677
 msgid "Contacting Server"
-msgstr "Conectando ao servidor"
+msgstr "Duke Kontaktuar Serverin"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:685
 msgid "Updating Database"
-msgstr "Atualizando banco de dados"
+msgstr "Duke Përditësuar Databazën"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:733
 msgid "Channel Guide Update Completed"
-msgstr "Atualização da Guia de Canais Completada"
+msgstr "Përditësimi i Udhëzuesit të Kanaleve u kompletua"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:741
 msgid "Channel Guide Retrieval Failed Due to Network Problems"
-msgstr "Busca de canais falhou devido a problemas na rede"
+msgstr ""
+"Tërheqja e Udhëzuesit të Kanaleve Dështoi Për Shkak të Problemeve të Rrjetit"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:759
 msgid "Downloading Channel Guide"
-msgstr "Baixando Guia de Canais"
+msgstr "Duke Shkarkuar Udhëzuesin e Kanaleve"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_File"
-msgstr "_Arquivo"
+msgstr "_Skedari"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "> Channel Guide"
-msgstr "> Guia de Canais"
+msgstr "> Guida e Kanaleve"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Bookmark this Channel"
-msgstr "Marcar como Favorito"
+msgstr "Shëno Këtë Kanal"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Volume:"
-msgstr "Volume:"
+msgstr "Volumi:"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_Fullscreen"
-msgstr "_Tela Cheia"
+msgstr "_Ekran i plotë"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_Help"
-msgstr "_Ajuda"
+msgstr "_Ndihmë"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_View"
-msgstr "_Ver"
+msgstr "_Shfaq"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "_Bookmarks"
-msgstr "_Favoritos"
+msgstr "_Libërshënues"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "<i>Last Updated: </i>"
-msgstr "<i>Última atualização: </i>"
+msgstr "<i>Përditësuar së Fundmi: </i>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Last Updated: "
-msgstr "Última atualização: "
+msgstr "Përditësuar së Fundmi: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/pySopCast.glade
 msgid "Never"
-msgstr "Nunca"
+msgstr "Kurrë"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide Auto-Update Frequency</b>"
-msgstr "<b>Frequência de Atualização Automática da Guia de Canais</b>"
+msgstr "<b>Frekuenca e Vetë Përditësimit të Udhëzuesit të Kanaleve</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide Language</b>"
-msgstr "<b>Idioma da Guia de Canais</b>"
+msgstr "<b>Gjuha e Udhëzuesit të Kanaleve</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide Layout:</b>"
-msgstr "<b>Layout da Guia de Canais:</b>"
+msgstr "<b>Dalja e Udhëzuesit të Kanaleve:</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Guide URL</b>"
-msgstr "<b>URL da guia de canais</b>"
+msgstr "<b>URL e Udhëzuesit të Kanaleve</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Channel Timeout</b>"
-msgstr "<b>Tempo limite do canal</b>"
+msgstr "<b>Skadenca e Kanalit</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Media Player</b>"
-msgstr "<b>Media Player</b>"
+msgstr "<b>Luajtësi i Mediave</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<b>Ports</b>"
-msgstr "<b>Portas</b>"
+msgstr "<b>Portat</b>"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Classic (Separate windows)"
-msgstr "<b>Classico (Janelas Separadas)</b>"
+msgstr "Klasike (Dritare të Ndara)"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Command: "
-msgstr "Comando: "
+msgstr "Komanda: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Frequency"
-msgstr "Frequência"
+msgstr "Frekuenca"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "In-bound Port: "
-msgstr "Porta de entrada: "
+msgstr "Porti në Hyrje: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Language"
-msgstr "Idioma"
+msgstr "Gjuha"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Out-bound Port: "
-msgstr "Porta de Saída: "
+msgstr "Porti në Dalje: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Player"
-msgstr "Player"
+msgstr "Lojtari"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Static Ports"
-msgstr "Portas Estáticas"
+msgstr "Portet Statike"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Timeout"
-msgstr "Tempo Esgotado"
+msgstr "Skadencë kohe"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "URL: "
@@ -241,112 +242,112 @@ msgstr "URL: "
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Unity (Single-window)"
-msgstr "Unida (Única Janela)"
+msgstr "Njëtrajtshmëri (Dritare e Vetme)"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Use External Player"
-msgstr "Usar Player externo"
+msgstr "Përdor Luajtësin e Jashtëm"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Completed"
-msgstr "Completado"
+msgstr "Plotësuar"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Server Down"
-msgstr "Servidor Indisponível"
+msgstr "Serveri Ra"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Downloading"
-msgstr "Recebendo"
+msgstr "Duke Shkarkuar"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "Static Ports Unavailable"
-msgstr "Portas Estáticas Indisponíveis"
+msgstr "Portet Statike të Pa Disponueshme"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid ""
 "Static ports unavailable, do you wish to continue using dynamic ports?"
 msgstr ""
-"Portas estáticas indisponíveis, você gostaria de continuar usando portas "
-"dinâmicas?"
+"Portet statike nuk janë të disponueshme, dëshironi të vazhdoni duke përdorur "
+"portet dinamike?"
 
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:754
 msgid "<i>3 Seconds</i>"
-msgstr "<i>3 Segundos</i>"
+msgstr "<i>3 Sekonda</i>"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:755
 msgid "<i>30 Seconds</i>"
-msgstr "<i>30 Segundos</i>"
+msgstr "<i>30 Sekonda</i>"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:756
 msgid "<i>5 Minutes</i>"
-msgstr "<i>5 Minutos</i>"
+msgstr "<i>5 Minuta</i>"
 
 #: /home/jason/Desktop/SopCast-Player/sopcast-player.py:757
 #: /home/jason/Desktop/SopCast-Player/ui/Options.glade
 msgid "<i>Never</i>"
-msgstr "<i>Nunca</i>"
+msgstr "<i>Kurrë</i>"
 
 msgid "Screenshot"
-msgstr "Captura de tela"
+msgstr "Pamje ekrani"
 
 msgid "Name:"
-msgstr "Nome:"
+msgstr "Emri:"
 
 msgid "Format:"
-msgstr "Formato:"
+msgstr "Formati:"
 
 msgid "Bitrate:"
-msgstr "Taxa de bits:"
+msgstr "Raporti i bitit:"
 
 msgid "Channel Group:"
-msgstr "Grupo de canais:"
+msgstr "Grupi i Kanaleve:"
 
 msgid "Classification:"
-msgstr "Classificação:"
+msgstr "Klasifikimi:"
 
 msgid "Description:"
-msgstr "Descrição:"
+msgstr "Përshkrimi:"
 
 msgid "Preferences"
-msgstr "Preferências"
+msgstr "Preferencat"
 
 msgid "Play"
-msgstr "Reproduzir"
+msgstr "Luaj"
 
 msgid "Stop"
-msgstr "Parar"
+msgstr "Ndalo"
 
 msgid "Always On Top"
-msgstr "Sempre no Topo"
+msgstr "Gjithmonë në plan të parë"
 
 msgid "Show Controls"
-msgstr "Mostrar Controles"
+msgstr "Shfaq Kontrollet"
 
 msgid "Chinese"
-msgstr "Chinês"
+msgstr "Kineze"
 
 msgid "English"
-msgstr "Inglês"
+msgstr "Anglisht"
 
 msgid "<i>Daily</i>"
-msgstr "<i>Diariamente</i>"
+msgstr "<i>Ditore</i>"
 
 msgid "<i>Program Start</i>"
-msgstr "<i>Início do programa</i>"
+msgstr "<i>Nisja e Programit</i>"
 
 msgid "<big><b>Channel Bookmark</b></big>"
-msgstr "<big><b>Canais Favoritos</b></big>"
+msgstr "<big><b>Shënues i Kanaleve</b></big>"
 
 msgid "_Edit"
-msgstr "_Editar"
+msgstr "_Modifiko"
 
 msgid "Properties"
-msgstr "Propriedades"
+msgstr "Parametrat"
 
 msgid "Bookmark"
-msgstr "Favorito"
+msgstr "Libërshënues"
 
 msgid "Show Toolbar"
-msgstr "Exibir a barra de ferramentas"
+msgstr "Shfaq Shiritin e Mjeteve"
